# clrpg

./: .gitignore  Cargo.toml  logo.txt
res/: adjectives.txt  animals.txt  logo.txt
src/: main.rs
src/commands/: character.rs  clean.rs  door.rs  init.rs  mod.rs  run.rs  status.rs
src/commands/utils/: common.rs  print.rs
src/utils/: common.rs  mod.rs  print.rs
